src/parser.c
/* Generated by re2c 0.16 on Fri Mar 24 12:21:07 2017 */
#line 1 "src/parser.re"
/*******************************************************************************
 Copyright (c) 2016, Michael Wallner <mike@php.net>.
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:

     * Redistributions of source code must retain the above copyright notice,
       this list of conditions and the following disclaimer.
     * Redistributions in binary form must reproduce the above copyright
       notice, this list of conditions and the following disclaimer in the
       documentation and/or other materials provided with the distribution.

 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
 FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*******************************************************************************/

#include "php_psi_stdinc.h"
#include <sys/mman.h>
#include <assert.h>
#include <stdarg.h>

#include "parser.h"

#define YYMAXFILL 13
#ifndef YYMAXFILL
# define YYMAXFILL 256
#endif

struct psi_parser *psi_parser_init(struct psi_parser *P, psi_error_cb error, unsigned flags)
{
	if (!P) {
		P = malloc(sizeof(*P));
	}
	memset(P, 0, sizeof(*P));

	psi_data_ctor_with_dtors(PSI_DATA(P), error, flags);

	P->preproc = psi_cpp_init(P);

	psi_cpp_load_defaults(P->preproc);

	return P;
}

struct psi_parser_input *psi_parser_open_file(struct psi_parser *P, const char *filename, bool report_errors)
{
	struct stat sb;
	FILE *fp;
	struct psi_parser_input *fb;

	if (stat(filename, &sb)) {
		if (report_errors) {
			P->error(PSI_DATA(P), NULL, PSI_WARNING,
					"Could not stat '%s': %s",
					filename, strerror(errno));
		}
		return NULL;
	}

	if (!(fb = malloc(sizeof(*fb) + strlen(filename) + 1 + sb.st_size + YYMAXFILL))) {
		if (report_errors) {
			P->error(PSI_DATA(P), NULL, PSI_WARNING,
					"Could not allocate %zu bytes for reading '%s': %s",
					sb.st_size + YYMAXFILL, filename, strerror(errno));
		}
		return NULL;
	}

	if (!(fp = fopen(filename, "r"))) {
		free(fb);
		if (report_errors) {
			P->error(PSI_DATA(P), NULL, PSI_WARNING,
					"Could not open '%s' for reading: %s",
					filename, strerror(errno));
		}
		return NULL;
	}

	if (sb.st_size != fread(fb->buffer, 1, sb.st_size, fp)) {
		free(fb);
		fclose(fp);
		if (report_errors) {
			P->error(PSI_DATA(P), NULL, PSI_WARNING,
					"Could not read %zu bytes from '%s': %s",
					sb.st_size + YYMAXFILL, filename, strerror(errno));
		}
		return NULL;
	}

	memset(fb->buffer + sb.st_size, 0, YYMAXFILL);
	fb->length = sb.st_size;
	fb->file = &fb->buffer[sb.st_size + YYMAXFILL];
	memcpy(fb->file, filename, strlen(filename) + 1);

	return fb;
}

struct psi_parser_input *psi_parser_open_string(struct psi_parser *P, const char *string, size_t length)
{
	struct psi_parser_input *sb;

	if (!(sb = malloc(sizeof(*sb) + sizeof("<stdin>") + length + YYMAXFILL))) {
		P->error(PSI_DATA(P), NULL, PSI_WARNING,
				"Could not allocate %zu bytes: %s",
				length + YYMAXFILL, strerror(errno));
		return NULL;
	}

	memcpy(sb->buffer, string, length);
	memset(sb->buffer + length, 0, YYMAXFILL);

	sb->length = length;
	sb->file = &sb->buffer[length + YYMAXFILL];
	memcpy(sb->file, "<stdin>", sizeof("<stdin>"));

	return sb;
}

#if 0
static void psi_parser_register_constants(struct psi_parser *P)
{
	zend_string *key;
	zval *val;

	ZEND_HASH_FOREACH_STR_KEY_VAL(&P->cpp.defs, key, val)
	{
		struct psi_impl_def_val *iv;
		struct psi_const_type *ct;
		struct psi_const *c;
		const char *ctn;
		token_t ctt;
		impl_val tmp;
		zend_string *str;

		ZVAL_DEREF(val);
		switch (Z_TYPE_P(val)) {
		case IS_TRUE:
		case IS_FALSE:
			ctt = PSI_T_BOOL;
			ctn = "bool";
			tmp.zend.bval = Z_TYPE_P(val) == IS_TRUE;
			break;
		case IS_LONG:
			ctt = PSI_T_INT;
			ctn = "int";
			tmp.zend.lval = Z_LVAL_P(val);
			break;
		case IS_DOUBLE:
			ctt = PSI_T_FLOAT;
			ctn = "float";
			tmp.dval = Z_DVAL_P(val);
			break;
		default:
			ctt = PSI_T_STRING;
			ctn = "string";
			str = zval_get_string(val);
			tmp.zend.str = zend_string_dup(str, 1);
			zend_string_release(str);
			break;
		}

		iv = psi_impl_def_val_init(ctt, NULL);
		iv->ival = tmp;
		ct = psi_const_type_init(ctt, ctn);
		c = psi_const_init(ct, key->val, iv);
		if (!P->consts) {
			P->consts = psi_plist_init((psi_plist_dtor) psi_const_free);
		}
		P->consts = psi_plist_add(P->consts, &c);
	}
	ZEND_HASH_FOREACH_END();
}
#endif

struct psi_plist *psi_parser_preprocess(struct psi_parser *P, struct psi_plist *tokens)
{
	if (psi_cpp_process(P->preproc, &tokens)) {
		return tokens;
	}
	return NULL;
}

bool psi_parser_process(struct psi_parser *P, struct psi_plist *tokens, size_t *processed)
{
	if (psi_plist_count(tokens)) {
		int rc;

		if (P->flags & PSI_DEBUG) {
			psi_parser_proc_debug = 1;
		}
		rc = psi_parser_proc_parse(P, tokens, processed);
		if (P->flags & PSI_DEBUG) {
			psi_parser_proc_debug = 0;
		}
		return rc == 0;
	}
	return true;
}

bool psi_parser_parse(struct psi_parser *P, struct psi_parser_input *I)
{
	struct psi_plist *scanned, *preproc;
	size_t processed = 0;

	if (!(scanned = psi_parser_scan(P, I))) {
		return false;
	}

	if (!(preproc = psi_parser_preprocess(P, scanned))) {
		psi_plist_free(scanned);
		return false;
	}

	if (!psi_parser_process(P, preproc, &processed)) {
		psi_plist_free(preproc);
		return false;
	}

	psi_plist_free(preproc);
	return true;
}

void psi_parser_dtor(struct psi_parser *P)
{
	psi_cpp_free(&P->preproc);
	psi_data_dtor(PSI_DATA(P));

	memset(P, 0, sizeof(*P));
}

void psi_parser_free(struct psi_parser **P)
{
	if (*P) {
		psi_parser_dtor(*P);
		free(*P);
		*P = NULL;
	}
}

#define NEWLINE() \
	eol = cur; \
	++I->lines

#define NEWTOKEN(t) \
	token = psi_token_init(t, tok, cur - tok, tok - eol + 1, I->lines, I->file); \
	tokens = psi_plist_add(tokens, &token); \
	if (P->flags & PSI_DEBUG) { \
		fprintf(stderr, "PSI< "); \
		psi_token_dump(2, token); \
	}


struct psi_plist *psi_parser_scan(struct psi_parser *P, struct psi_parser_input *I)
{
	struct psi_plist *tokens;
	struct psi_token *token;
	const char *tok, *cur, *lim, *mrk, *eol;

	tok = mrk = eol = cur = I->buffer;
	lim = I->buffer + I->length;
	I->lines = 1;
	tokens = psi_plist_init((void (*)(void *)) psi_token_free);

	start: ;
		tok = cur;

		
#line 280 "src/parser.c"
		{
			unsigned char yych;
			unsigned int yyaccept = 0;
			if ((lim - cur) < 13) if (cur >= lim) goto done;;
			yych = *cur;
			switch (yych) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\v':
			case '\f':
			case 0x0E:
			case 0x0F:
			case 0x10:
			case 0x11:
			case 0x12:
			case 0x13:
			case 0x14:
			case 0x15:
			case 0x16:
			case 0x17:
			case 0x18:
			case 0x19:
			case 0x1A:
			case 0x1B:
			case 0x1C:
			case 0x1D:
			case 0x1E:
			case 0x1F:
			case '?':
			case '@':
			case '`':
			case 0x7F:	goto yy2;
			case '\t':
			case ' ':	goto yy4;
			case '\n':
			case '\r':	goto yy7;
			case '!':	goto yy9;
			case '"':	goto yy11;
			case '#':	goto yy12;
			case '$':	goto yy14;
			case '%':	goto yy15;
			case '&':	goto yy17;
			case '\'':	goto yy19;
			case '(':	goto yy20;
			case ')':	goto yy22;
			case '*':	goto yy24;
			case '+':	goto yy26;
			case ',':	goto yy28;
			case '-':	goto yy30;
			case '.':	goto yy32;
			case '/':	goto yy34;
			case '0':	goto yy36;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy38;
			case ':':	goto yy40;
			case ';':	goto yy42;
			case '<':	goto yy44;
			case '=':	goto yy46;
			case '>':	goto yy48;
			case 'A':
			case 'a':	goto yy50;
			case 'B':
			case 'b':	goto yy52;
			case 'C':
			case 'c':	goto yy53;
			case 'D':
			case 'd':	goto yy54;
			case 'E':
			case 'e':	goto yy55;
			case 'F':
			case 'f':	goto yy56;
			case 'I':
			case 'i':	goto yy59;
			case 'L':	goto yy60;
			case 'M':
			case 'm':	goto yy61;
			case 'N':
			case 'n':	goto yy62;
			case 'O':
			case 'o':	goto yy63;
			case 'P':
			case 'p':	goto yy64;
			case 'R':
			case 'r':	goto yy65;
			case 'S':
			case 's':	goto yy66;
			case 'T':
			case 't':	goto yy67;
			case 'U':
			case 'u':	goto yy68;
			case 'V':
			case 'v':	goto yy69;
			case 'W':
			case 'w':	goto yy70;
			case 'Z':
			case 'z':	goto yy71;
			case '[':	goto yy72;
			case '\\':	goto yy74;
			case ']':	goto yy76;
			case '^':	goto yy78;
			case 'l':	goto yy80;
			case '{':	goto yy81;
			case '|':	goto yy83;
			case '}':	goto yy85;
			case '~':	goto yy87;
			default:	goto yy57;
			}
yy2:
			++cur;
yy3:
#line 433 "src/parser.re"
			{ NEWTOKEN(-2); goto error; }
#line 407 "src/parser.c"
yy4:
			++cur;
			if (lim <= cur) if (cur >= lim) goto done;;
			yych = *cur;
			switch (yych) {
			case '\t':
			case ' ':	goto yy4;
			default:	goto yy6;
			}
yy6:
#line 432 "src/parser.re"
			{ NEWTOKEN(PSI_T_WHITESPACE); goto start; }
#line 420 "src/parser.c"
yy7:
			++cur;
#line 431 "src/parser.re"
			{ NEWTOKEN(PSI_T_EOL); NEWLINE(); goto start; }
#line 425 "src/parser.c"
yy9:
			++cur;
			switch ((yych = *cur)) {
			case '=':	goto yy89;
			default:	goto yy10;
			}
yy10:
#line 335 "src/parser.re"
			{ NEWTOKEN(PSI_T_NOT); goto start; }
#line 435 "src/parser.c"
yy11:
			yyaccept = 0;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '"':	goto yy3;
			default:	goto yy91;
			}
yy12:
			++cur;
#line 318 "src/parser.re"
			{ NEWTOKEN(PSI_T_HASH); goto start; }
#line 447 "src/parser.c"
yy14:
			yych = *++cur;
			switch (yych) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\t':
			case '\n':
			case '\v':
			case '\f':
			case '\r':
			case 0x0E:
			case 0x0F:
			case 0x10:
			case 0x11:
			case 0x12:
			case 0x13:
			case 0x14:
			case 0x15:
			case 0x16:
			case 0x17:
			case 0x18:
			case 0x19:
			case 0x1A:
			case 0x1B:
			case 0x1C:
			case 0x1D:
			case 0x1E:
			case 0x1F:
			case ' ':
			case '!':
			case '"':
			case '#':
			case '$':
			case '%':
			case '&':
			case '\'':
			case '(':
			case ')':
			case '*':
			case '+':
			case ',':
			case '-':
			case '.':
			case '/':
			case ':':
			case ';':
			case '<':
			case '=':
			case '>':
			case '?':
			case '@':
			case '[':
			case '\\':
			case ']':
			case '^':
			case '`':
			case '{':
			case '|':
			case '}':
			case '~':
			case 0x7F:	goto yy3;
			default:	goto yy93;
			}
yy15:
			++cur;
#line 336 "src/parser.re"
			{ NEWTOKEN(PSI_T_MODULO); goto start; }
#line 522 "src/parser.c"
yy17:
			++cur;
			switch ((yych = *cur)) {
			case '&':	goto yy96;
			default:	goto yy18;
			}
yy18:
#line 337 "src/parser.re"
			{ NEWTOKEN(PSI_T_AMPERSAND); goto start; }
#line 532 "src/parser.c"
yy19:
			yyaccept = 0;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '\'':	goto yy3;
			default:	goto yy98;
			}
yy20:
			++cur;
#line 319 "src/parser.re"
			{ NEWTOKEN(PSI_T_LPAREN); goto start; }
#line 544 "src/parser.c"
yy22:
			++cur;
#line 320 "src/parser.re"
			{ NEWTOKEN(PSI_T_RPAREN); goto start; }
#line 549 "src/parser.c"
yy24:
			++cur;
#line 333 "src/parser.re"
			{ NEWTOKEN(PSI_T_ASTERISK); goto start; }
#line 554 "src/parser.c"
yy26:
			++cur;
			switch ((yych = *cur)) {
			case '.':	goto yy100;
			case '0':	goto yy36;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy38;
			default:	goto yy27;
			}
yy27:
#line 338 "src/parser.re"
			{ NEWTOKEN(PSI_T_PLUS); goto start; }
#line 574 "src/parser.c"
yy28:
			++cur;
#line 322 "src/parser.re"
			{ NEWTOKEN(PSI_T_COMMA); goto start; }
#line 579 "src/parser.c"
yy30:
			++cur;
			switch ((yych = *cur)) {
			case '.':	goto yy100;
			case '0':	goto yy36;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy38;
			default:	goto yy31;
			}
yy31:
#line 339 "src/parser.re"
			{ NEWTOKEN(PSI_T_MINUS); goto start; }
#line 599 "src/parser.c"
yy32:
			yyaccept = 1;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '.':	goto yy102;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy100;
			case 'D':
			case 'd':	goto yy104;
			case 'F':
			case 'L':
			case 'f':
			case 'l':	goto yy105;
			default:	goto yy33;
			}
yy33:
#line 350 "src/parser.re"
			{ NEWTOKEN(PSI_T_PERIOD); goto start; }
#line 626 "src/parser.c"
yy34:
			++cur;
			switch ((yych = *cur)) {
			case '*':	goto yy106;
			case '/':	goto yy108;
			default:	goto yy35;
			}
yy35:
#line 340 "src/parser.re"
			{ NEWTOKEN(PSI_T_SLASH); goto start; }
#line 637 "src/parser.c"
yy36:
			yyaccept = 2;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '.':	goto yy110;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':	goto yy112;
			case 'E':
			case 'e':	goto yy114;
			case 'L':
			case 'l':	goto yy115;
			case 'U':
			case 'u':	goto yy116;
			case 'X':
			case 'x':	goto yy117;
			default:	goto yy37;
			}
yy37:
#line 424 "src/parser.re"
			{ NEWTOKEN(PSI_T_NUMBER); goto start; }
#line 664 "src/parser.c"
yy38:
			yyaccept = 2;
			mrk = ++cur;
			if ((lim - cur) < 3) if (cur >= lim) goto done;;
			yych = *cur;
			switch (yych) {
			case '.':	goto yy110;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy38;
			case 'E':
			case 'e':	goto yy114;
			case 'L':
			case 'l':	goto yy115;
			case 'U':
			case 'u':	goto yy116;
			default:	goto yy37;
			}
yy40:
			++cur;
#line 323 "src/parser.re"
			{ NEWTOKEN(PSI_T_COLON); goto start; }
#line 694 "src/parser.c"
yy42:
			++cur;
#line 321 "src/parser.re"
			{ NEWTOKEN(PSI_T_EOS); goto start; }
#line 699 "src/parser.c"
yy44:
			yyaccept = 3;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy118;
			case '<':	goto yy120;
			case '=':	goto yy122;
			default:	goto yy45;
			}
yy45:
#line 348 "src/parser.re"
			{ NEWTOKEN(PSI_T_LCHEVR); goto start; }
#line 777 "src/parser.c"
yy46:
			++cur;
			switch ((yych = *cur)) {
			case '=':	goto yy124;
			default:	goto yy47;
			}
yy47:
#line 332 "src/parser.re"
			{ NEWTOKEN(PSI_T_EQUALS); goto start; }
#line 787 "src/parser.c"
yy48:
			++cur;
			switch ((yych = *cur)) {
			case '=':	goto yy126;
			case '>':	goto yy128;
			default:	goto yy49;
			}
yy49:
#line 349 "src/parser.re"
			{ NEWTOKEN(PSI_T_RCHEVR); goto start; }
#line 798 "src/parser.c"
yy50:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'R':
			case 'r':	goto yy130;
			default:	goto yy58;
			}
yy51:
#line 425 "src/parser.re"
			{ NEWTOKEN(PSI_T_NAME); goto start; }
#line 810 "src/parser.c"
yy52:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'O':
			case 'o':	goto yy132;
			default:	goto yy58;
			}
yy53:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'A':
			case 'a':	goto yy133;
			case 'H':
			case 'h':	goto yy134;
			case 'O':
			case 'o':	goto yy135;
			default:	goto yy58;
			}
yy54:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'E':
			case 'e':	goto yy136;
			case 'O':
			case 'o':	goto yy137;
			default:	goto yy58;
			}
yy55:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'L':
			case 'l':	goto yy138;
			case 'N':
			case 'n':	goto yy139;
			case 'R':
			case 'r':	goto yy140;
			default:	goto yy58;
			}
yy56:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'A':
			case 'a':	goto yy141;
			case 'L':
			case 'l':	goto yy142;
			case 'R':
			case 'r':	goto yy143;
			case 'U':
			case 'u':	goto yy144;
			default:	goto yy58;
			}
yy57:
			yyaccept = 4;
			mrk = ++cur;
			if (lim <= cur) if (cur >= lim) goto done;;
			yych = *cur;
yy58:
			switch (yych) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\t':
			case '\n':
			case '\v':
			case '\f':
			case '\r':
			case 0x0E:
			case 0x0F:
			case 0x10:
			case 0x11:
			case 0x12:
			case 0x13:
			case 0x14:
			case 0x15:
			case 0x16:
			case 0x17:
			case 0x18:
			case 0x19:
			case 0x1A:
			case 0x1B:
			case 0x1C:
			case 0x1D:
			case 0x1E:
			case 0x1F:
			case ' ':
			case '!':
			case '"':
			case '#':
			case '$':
			case '%':
			case '&':
			case '\'':
			case '(':
			case ')':
			case '*':
			case '+':
			case ',':
			case '-':
			case '.':
			case '/':
			case ':':
			case ';':
			case '<':
			case '=':
			case '>':
			case '?':
			case '@':
			case '[':
			case ']':
			case '^':
			case '`':
			case '{':
			case '|':
			case '}':
			case '~':
			case 0x7F:	goto yy51;
			case '\\':	goto yy131;
			default:	goto yy57;
			}
yy59:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'F':
			case 'f':	goto yy145;
			case 'N':
			case 'n':	goto yy147;
			default:	goto yy58;
			}
yy60:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '"':	goto yy148;
			case '\'':	goto yy149;
			case 'E':
			case 'e':	goto yy150;
			case 'I':
			case 'i':	goto yy151;
			case 'O':
			case 'o':	goto yy152;
			default:	goto yy58;
			}
yy61:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'I':
			case 'i':	goto yy153;
			default:	goto yy58;
			}
yy62:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'U':
			case 'u':	goto yy154;
			default:	goto yy58;
			}
yy63:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'B':
			case 'b':	goto yy155;
			default:	goto yy58;
			}
yy64:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'A':
			case 'a':	goto yy156;
			case 'O':
			case 'o':	goto yy157;
			case 'R':
			case 'r':	goto yy158;
			default:	goto yy58;
			}
yy65:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'E':
			case 'e':	goto yy159;
			default:	goto yy58;
			}
yy66:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'E':
			case 'e':	goto yy160;
			case 'H':
			case 'h':	goto yy161;
			case 'I':
			case 'i':	goto yy162;
			case 'T':
			case 't':	goto yy163;
			default:	goto yy58;
			}
yy67:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'E':
			case 'e':	goto yy164;
			case 'O':
			case 'o':	goto yy165;
			case 'R':
			case 'r':	goto yy166;
			case 'Y':
			case 'y':	goto yy167;
			default:	goto yy58;
			}
yy68:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'I':
			case 'i':	goto yy168;
			case 'N':
			case 'n':	goto yy169;
			default:	goto yy58;
			}
yy69:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'O':
			case 'o':	goto yy170;
			default:	goto yy58;
			}
yy70:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'A':
			case 'a':	goto yy171;
			default:	goto yy58;
			}
yy71:
			yyaccept = 4;
			yych = *(mrk = ++cur);
			switch (yych) {
			case 'V':
			case 'v':	goto yy172;
			default:	goto yy58;
			}
yy72:
			++cur;
#line 326 "src/parser.re"
			{ NEWTOKEN(PSI_T_LBRACKET); goto start; }
#line 1075 "src/parser.c"
yy74:
			++cur;
			switch ((yych = *cur)) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\t':
			case '\n':
			case '\v':
